# qax-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: benchmark_jit_vs_eager.py  benchmark_scan_vs_loop.py  benchmark_vmap_batching.py
docs/: api.md  architecture.md
examples/: 01_bell_state.py  02_ghz_state.py  03_circuit_synthesis.py  04_qaoa_maxcut.py  05_tiny_vqe.py
qax/: __init__.py  circuit.py  gates.py  grad_utils.py  metrics.py  noise.py  observables.py  optim.py  program.py  qasm.py  sampling.py  simulate.py  state.py  typing.py
tests/: test_gates.py  test_gradients.py  test_noise.py  test_observables.py  test_optim.py  test_sampling.py  test_simulation.py  test_state.py
